the end is near

--- a/index.html
+++ b/index.html
@@ -11,46 +11,44 @@
 
 <header>
     <div>P o k e A p i - P o k e d e x</div>
-    <input type="number" id="search" placeholder="Entre le n° de ton pokemon"/>
+    <input type="number" id="search" placeholder="Entre le n° de ton pokemon !! " min="0" max="898"/>
 </header>
-
-<body>
-    <div id="container">
-        <div id="pokedexView">
-            <div id="pokeLeft">
-                <div id="pokeLeftview">
-                <div id="pokePictureName">
-                    <div id="picture"></div>
-                    <div id="name"></div>
+    <body>
+        <div id="container">
+            <div id="pokedexView">
+                    <div id="pokeLeft">
+                        <div id="pokeLeftview">
+                        <div id="pokePictureName">
+                            <div id="picture"></div>
+                            <div id="name"></div>
+                        </div>
+                        <div id="attribute">
+                            <div id="hp">HP : </div>
+                            <div id="attack">Attaque : </div>
+                            <div id="defense">Defense : </div>
+                            <div id="speAtk">Attaque Special : </div>
+                            <div id="speDef">Defense Special : </div>
+                            <div id="speed">Vitesse :</div>
+                        </div>
+                    </div>
                 </div>
-                <div id="attribute">
-                    <div id="hp">HP : </div>
-                    <div id="attack">Attaque : </div>
-                    <div id="defense">Defense : </div>
-                    <div id="speAtk">Attaque Special : </div>
-                    <div id="speDef">Defense Special : </div>
-                    <div id="speed">Vitesse :</div>
-                </div>
-            </div>
-            </div>
-            <div id="liaison">
-                <div id="liaison1"></div>
-                <div id="liaison1"></div>
-            </div>
-            <div id="pokeRight">
-                <div id="descriptionView">
-                    <div id="description"></div>
-                </div>
+                    <div id="liaison">
+                        <div id="liaison1"></div>
+                        <div id="liaison1"></div>
+                    </div>
+                    <div id="pokeRight">
+                        <div id="descriptionView">
+                            <div id="description">
+                                <div id="res1"></div>
+                                <div id="res2"></div>
+                                <div id="res3"></div>
+                                <div id="typeName"></div>
+                                <div id="type"></div>
+                            </div>
+                        </div>
+                    </div>
             </div>
         </div>
-
-
-
-
-
-
-
-    </div>
-    <script src="./index.js"></script>
-</body>
+        <script src="./index.js"></script>
+    </body>
 </html>
